# libmockspotify

./: .gitignore  Makefile.am  README.rst  Rakefile  autogen.sh  configure.ac  libmockspotify.pc.in  mockspotify.gemspec
debian/: changelog  control  copyright  gbp.conf  rules  watch
lib/: mockspotify.rb
lib/mockspotify/: version.rb
src/: Makefile.am  album.c  albumbrowse.c  artist.c  artistbrowse.c  error.c  event.c  extconf.rb  image.c  inbox.c  libmockspotify.c  libmockspotify.h  link.c  player.c  playlist.c  playlistcontainer.c  search.c  session.c  toplistbrowse.c  track.c  urlcode.c  user.c  util.c  util.h
test/: mockspotify_spec.rb
