lib_LTLIBRARIES = libmockspotify.la
include_HEADERS = libmockspotify.h

AM_CFLAGS = -Wall

libmockspotify_la_LDFLAGS = -version-info 0:1:0
libmockspotify_la_SOURCES = album.c 		\
			    albumbrowse.c	\
			    artist.c		\
			    artistbrowse.c	\
			    error.c		\
			    event.c		\
			    image.c		\
			    libmockspotify.c	\
			    link.c		\
			    player.c		\
			    playlist.c		\
			    playlistcontainer.c	\
			    search.c		\
			    session.c		\
			    track.c		\
			    toplistbrowse.c	\
			    user.c		\
			    util.c
