lib_LTLIBRARIES = libmockspotify.la
include_HEADERS = libmockspotify.h

AM_CFLAGS = -Wall

libmockspotify_la_LDFLAGS = -version-info 1:0:0
libmockspotify_la_SOURCES = albumbrowse.c	\
			    album.c		\
			    artistbrowse.c	\
			    artist.c		\
			    error.c		\
			    event.c		\
			    image.c		\
			    inbox.c		\
			    libmockspotify.c	\
			    link.c		\
			    player.c		\
			    playlist.c		\
			    playlistcontainer.c	\
			    search.c		\
			    session.c		\
			    toplistbrowse.c	\
			    track.c		\
			    user.c		\
			    util.c
